@@ -28,6 +28,14 @@
 // Macros generated by autoconf/automake/libtool/...
 #include "pqxx/config-internal-autotools.h"
 
+/* Work around a particularly pernicious and deliberate bug in Visual C++:
+ * min() and max() are defined as macros, which can have some very nasty
+ * consequences.
+ */
+#ifdef _MSC_VER
+#define NOMINMAX
+#endif
+
 #ifdef PQXX_HAVE_LIMITS
 #include <limits>
 #else // PQXX_HAVE_LIMITS
